--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4"
   }
 }
